--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -8,7 +8,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<ui:composition template="WEB-INF/template.xhtml">
+    <ui:composition template="WEB-INF/template.xhtml">
     <ui:define name="title">#{detalleProductoBean.producto.nombre}</ui:define>
     <ui:define name="content">
         <div class="row" >
@@ -23,7 +23,7 @@
             <div class="col-lg-5 col-md-1">
                 <div class="p-grid">
                     <div class="box">
-                        <p:rating value="#{detalleProductoBean.producto.cantidad}" readonly="true"/>
+                        <p:rating value="#{detalleProductoBean.calificacion}" readonly="true"/>
                         <h1 class="mt-4">#{detalleProductoBean.producto.nombre}</h1>
                         <h1 class="mt-4">$#{detalleProductoBean.producto.precio}</h1>
 
