--- a/ProyectoVentaProducto/web/src/main/webapp/usuario/perfil.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/usuario/perfil.xhtml
@@ -2,11 +2,56 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Title</title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<ui:composition template="../WEB-INF/template.xhtml">
+<ui:define name="title">Perfil</ui:define>
+<ui:define name="content">
+<p:panel header="Detalles">
+    <h:form>
+        <div class="card">
+            <h5>Comprados</h5>
+            <p:dataTable var="detalle" value="#{usuarioBean.productosComprados}" showGridlines="true">
+                <p:column headerText="Nombre">
+                    <h:outputText value="#{detalle.productoComprar.nombre}" />
+                </p:column>
 
-</body>
+                <p:column headerText="Precio">
+                    <h:outputText value="#{detalle.productoComprar.precio}" />
+                </p:column>
+
+                <p:column headerText="Categorias">
+                    <h:outputText value="#{detalle.productoComprar.categoriasProducto}" />
+                </p:column>
+
+                <p:column headerText="Cantidad">
+                    <h:outputText value="#{detalle.unidades}" />
+                </p:column>
+            </p:dataTable>
+        </div>
+    </h:form>
+    <h:form>
+        <div class="card">
+            <h5>Favoritos</h5>
+            <p:dataTable var="product" value="#{usuarioBean.productosFavoritos}" showGridlines="true">
+                <p:column headerText="Nombre">
+                    <h:outputText value="#{product.nombre}" />
+                </p:column>
+
+                <p:column headerText="Precio">
+                    <h:outputText value="#{product.precio}" />
+                </p:column>
+
+                <p:column headerText="Categorias">
+                    <h:outputText value="#{product.categoriasProducto}" />
+                </p:column>
+            </p:dataTable>
+        </div>
+    </h:form>
+</p:panel>
+</ui:define>
+</ui:composition>
 </html>
