--- a/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/index.xhtml
@@ -22,7 +22,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/usuario/registrar_usuario.xhtml" class="nav-link text-white">
+                                <a href="registrar_usuario.xhtml" class="nav-link text-white">
                                     <i class="material-icons icono" style="font-size: 2rem">app_registration</i>
                                     <p>Registrarse</p>
                                 </a>
