--- a/ProyectoVentaProducto/web/src/main/webapp/registrar_usuario.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/registrar_usuario.xhtml
@@ -26,7 +26,7 @@
     <p:password id="password_usuario" value="#{usuarioBean.usuario.password}" required="true"/>
 
     <p:outputLabel for="ciudad_usuario" value="Ciudad: " />
-    <p:selectOneMenu id="ciudad_usuario" value="#{usuarioBean.usuario.ciudad}" converter="#{ciudadConverter}" >
+    <p:selectOneMenu id="ciudad_usuario" value="#{usuarioBean.usuario.ciudad}" converter="#{ciudadConverter}" required="true">
         <f:selectItem itemLabel="Seleccione la ciudad" noSelectionOption="true" />
         <f:selectItems var="ciudad" itemLabel="#{ciudad.nombreCiudad}" value="#{usuarioBean.ciudades}" />
     </p:selectOneMenu>
