se realizaron correcciones, de iconos y se desarrollaron varios requisitos

--- a/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/detalle_producto.xhtml
@@ -29,6 +29,7 @@
 
                         <h:form class="mt-4" rendered="#{seguridadBean.autenticado}" >
                             <p:commandButton value="Añadir al carrito" icon="pi pi-shopping-cart" update="@form" action="#{seguridadBean.agregarAlCarrito(detalleProductoBean.producto.codigoProducto, detalleProductoBean.producto.precio, detalleProductoBean.producto.nombre, detalleProductoBean.producto.imagenPrincipal)}" />
+                            <p:commandButton value="Añadir a favoritos" icon="pi pi-heart" action="#{detalleProductoBean.añadirFavorito}" style="margin: 10px"/>
                             <p:growl for="add-cart" showDetail="true" />
                         </h:form>
                     </div>
