Changes by Camilo

--- a/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
@@ -55,7 +55,7 @@
                                 </a>
                             </li>
                             <li jsf:rendered="#{seguridadBean.autenticado}">
-                                <a href="index.xhtml" class="nav-link text-white">
+                                <a href="/usuario/subasta.xhtml" class="nav-link text-white">
                                     <i class="material-icons icono" style="font-size: 2rem">storefront</i>
                                     <p>Subasta</p>
                                 </a>
