--- a/ProyectoVentaProducto/web/src/main/webapp/usuario/carrito.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/usuario/carrito.xhtml
@@ -63,6 +63,17 @@
                 </h:form>
             </div>
         </div>
+        <h5 class="p-mt-0">Medio de Pago</h5>
+        <p:selectOneRadio value="#{seguridadBean.metodoDePago}" unselectable="false">
+            <f:selectItem itemLabel="Efectivo" itemValue="Efectivo"/>
+            <f:selectItem itemLabel="Tarjeta" itemValue="TarjetaCredito"/>
+        </p:selectOneRadio>
+        <div class="row mt-4 d-flex">
+            <h:form styleClass="text-center" >
+                <p:commandButton value="Efectivo" action="#{seguridadBean.setearEfectivo}" styleClass="mt-4" update="@form" icon="pi pi-dollar" iconPos="left" />
+                <p:commandButton  value="TarjetaCredito" action="#{seguridadBean.setearTarjeta}" styleClass="mt-4" update="@form" icon="pi pi-credit-card" iconPos="left" />
+            </h:form>
+        </div>
         <div class="row mt-4 d-flex">
                 <h:form styleClass="text-center" >
                     <p:commandButton value="Comprar" update="@form" icon="pi pi-check" styleClass="font-size: 20px" action="#{seguridadBean.comprar}"/>
