--- a/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/ProyectoVentaProducto/web/src/main/webapp/WEB-INF/template.xhtml
@@ -79,14 +79,19 @@
 
         <div class="px-3 py-2 border-bottom mb-3">
             <div class="container d-flex flex-wrap justify-content-center">
+                <h:form class="col-6 col-lg-auto mb-lg-0 me-lg-auto">
+                    <p:inputText style="width:300px " placeholder="Que producto esta buscando?" required="true" value="#{busquedaBean.busqueda}" />
+                    <p:commandButton icon="pi pi-search" action="#{busquedaBean.buscar}" update="@form" />
+                </h:form>
                 <h:form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
-                    <p:outputLabel for="ciudad_usuario" value="busqueda categoria: " />
-                    <p:selectOneMenu id="ciudad_usuario" value="#{busquedaBeanC.busqueda}" converter="#{categoriaConverter}" required="true">
+                    <p:outputLabel for="ciudad_usuario"  />
+                    <p:selectOneMenu id="ciudad_usuario" value="#{busquedaBeanC.busqueda}" converter="#{categoriaConverter}" >
                         <f:selectItem itemLabel="Seleccione la Categoria" noSelectionOption="true" />
                         <f:selectItems var="categoria" itemLabel="#{categoria.nombre}" value="#{productoBean.categorias}" />
                     </p:selectOneMenu>
-                    <p:commandButton icon="pi pi-search" action="#{busquedaBeanC.buscar}" update="@form" />
+                <p:commandButton  icon="pi pi-search" action="#{busquedaBeanC.buscar}" update="@form" />
                 </h:form>
+
 
                 <div class="botonComand" style="margin: 10px">
                     <h:form rendered="#{!seguridadBean.autenticado}" >
